compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__internal_attribute_on_type_variant.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1832
expression: "\ntype Wibble {\n    @internal\n    Wibble1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type Wibble {
    @internal
    Wibble1
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:5
  │
3 │     @internal
  │     ^^^^^^^^^ This attribute cannot be used on a variant.

Hint: Did you mean `@deprecated`?
